# urdftools

./: .gitignore
doc/: README.md  current.md  design_philosophy.md  dsl_approach.md  durdf_syntax_review.md  octagon_feature.md  paper.md  yaml_approach.md
dslurdf/: pyproject.toml
dslurdf/doc/: current.md  design_philosophy.md  dsl_approach.md  dsl_syntax.md  dsl_syntax_futures.md  durdf_syntax_review.md
dslurdf/dslurdf/: cli.py  durdf_loader.py  urdf_generator.py
dslurdf/examples/: cube.mtl  custom_robot.durdf  degree_test.durdf  dome1.durdf  dome1.yaml  dome2.durdf  dome2.txt  floora.durdf  linorobot2_2wd.yaml  mesh_example.durdf  octagon_bot.durdf  simple_mesh.durdf  simple_robot.yaml
dslurdf/output/: degree_test.urdf  dome2.urdf  mesh_example.urdf  simple_mesh.urdf
dslurdf/src/dslurdf/: __init__.py  cli.py  urdf_generator.py
dslurdf/tests/: test_compiler.py  test_hierarchy.py
dslurdf/tests/fixtures/: advanced.durdf  hierarchy.durdf  hierarchy.urdf  simple.durdf  simple.urdf
dslurdf/urdf-dsl/: README.md  linorobot2_2wd_complete.yaml
example_urdf/: dome1.urdf.xacro  floora.urdf  simple_robot.durdf
pyurdf/: README.md  pyproject.toml
pyurdf/doc/: approach_comparison.md  current.md  dome1_comparison.md  floora_comparison.md  notes.md  py_approach.md
pyurdf/examples/: dome1_build.py  floora_build.py  octagon_build.py  octagon_params.py  robot_build.py  simple_robot.py  test_octagon.py
pyurdf/lib/: urdfbuilder.py
pyurdf/pyurdf/: __init__.py  dome1_build.py  dome1_params.py  floora_build.py  floora_params.py  robot_build.py  robot_params.py
(+36 files in other folders)
